sonar yml and logo updated

--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -32,9 +32,9 @@ spring:
       indent-output: true
   datasource:
     type: com.zaxxer.hikari.HikariDataSource
-    url: jdbc:postgresql://localhost:5432/trelloclone
-    username: trelloclone
-    password:
+    url: jdbc:postgresql://localhost:5432/trello_db
+    username: postgres
+    password: password
     hikari:
       poolName: Hikari
       auto-commit: false
